# oop_bongbong1

./: .gitignore  AppSpec.md  CMakeLists.txt  Caution.txt  Filecontroller.cpp  InsertionController.cpp  InsertionView.cpp  Matrix.cpp  README.md  Sorting_controller.cpp  Student.cpp  Student.h  Student_model  juwon.txt  mainview  students.txt  text.txt
src/: MainController.cpp  MainMenuView.cpp  main.cpp
src/base_controller/: BaseController.cpp  BaseController.hpp  Controller.cpp  Controller.hpp  InsertionController.cpp  InsertionController.hpp  MainController.cpp  SearchController.cpp  SearchController.hpp  SortController.cpp  SortController.hpp
src/controller/: AgentController.hpp  ChatbotController.cpp  ChatbotController.hpp  Controller.hpp  FileController.hpp  Filecontroller.cpp  Filecontroller.hpp  InsertionController.cpp  InsertionController.hpp  MainController.cpp  MainController.hpp  MainMenuController.cpp  MainMenuController.hpp  SearchController.cpp  SearchController.hpp  SearchModule.hpp  SortController.cpp  SortController.hpp  SortingController.cpp  SortingController.hpp  SortingModule.hpp  Student.cpp  Student.hpp  StudentList.cpp  prevMainController.cpp
src/llama/: LLM.cpp  LLM.hpp  LlamaService.cpp  LlamaService.hpp
src/model/: Student.cpp  Student.h  Student.hpp  StudentList.cpp  StudentList.hpp  StudentModel.cpp  StudentModel.hpp
src/view/: AgentView.cpp  AgentView.hpp  ErrorView.hpp  ErrorrView.cpp  ErrorrView.hpp  FileView.hpp  InsertionView.cpp  InsertionView.hpp  MainMenuView.cpp  MainMenuView.hpp  ResultView.hpp  SearchResultView.cpp  SearchResultView.hpp  SearchSelectionView.cpp  SearchSelectionView.hpp  SearchView.cpp  SearchView.hpp  SearchViewOG.cpp  SortSelectionView.cpp  SortSelectionView.hpp  SortView.cpp  SortView.hpp  SortingResultView.cpp  SortingResultView.hpp  SortingView.cpp  SortingView.hpp  View.cpp  View.hpp
